Выполнить ТЗ спринта 8